# python_for_public_transport

./: README.rst  pyproject.toml  talk.slides.html
ipynb/: talk.ipynb
ipynb/.ipynb_checkpoints/: talk-checkpoint.ipynb
