[tool.poetry]
name = "python_for_public_transport"
version = "1.0.0"
description = "A presentation for Kiwi PyCon 2019"
authors = ["Alex Raichev <araichev@mrcagney.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0"
gtfstk = "^10"
folium = "^0.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
